--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "esbuild": "^0.24.0",
     "express": "^4.21.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
